// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayOutside renders 0 1`] = `
Array [
  .c0 {
  display-outside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders function 1`] = `
Array [
  .c0 {
  display-outside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: has;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: has;
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders invalid theme path 1`] = `
Array [
  .c0 {
  display-outside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders negative number 1`] = `
Array [
  .c0 {
  display-outside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    display-outside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-outside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    display-outside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-outside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-outside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-outside: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-outside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-outside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-outside: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    display-outside: July;
  }
}

@media April {
  .c0 {
    display-outside: August;
  }
}

@media January {
  .c0 {
    display-outside: September;
  }
}

@media April {
  .c0 {
    display-outside: November;
  }
}

@media June {
  .c0 {
    display-outside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    display-outside: July;
  }
}

@media April {
  .c0 {
    display-outside: August;
  }
}

@media January {
  .c0 {
    display-outside: September;
  }
}

@media April {
  .c0 {
    display-outside: November;
  }
}

@media June {
  .c0 {
    display-outside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-outside: January;
  }
}

@media April {
  .c0 {
    display-outside: December;
  }
}

@media January {
  .c0 {
    display-outside: April;
  }
}

@media April {
  .c0 {
    display-outside: May;
  }
}

@media June {
  .c0 {
    display-outside: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-outside: January;
  }
}

@media April {
  .c0 {
    display-outside: December;
  }
}

@media January {
  .c0 {
    display-outside: April;
  }
}

@media April {
  .c0 {
    display-outside: May;
  }
}

@media June {
  .c0 {
    display-outside: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders postitive number 1`] = `
Array [
  .c0 {
  display-outside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders string 1`] = `
Array [
  .c0 {
  display-outside: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: June;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: June;
}

<div
    className="c0"
  />,
]
`;

exports[`displayOutside renders valid theme path 1`] = `
Array [
  .c0 {
  display-outside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-outside: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
